<resources>
    <string name="camera_setting">Camera</string>
    <string name="path_settings">System apps/Camera/Settings</string>
    <string name="search_settings">Camera settings;Quality;Image quality;Image location;Picture location;Face detection;Camera sound</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your device."</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="wait">Just a sec…</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">Internal storage is full</string>
    <string name="preparing_sd">Checking internal storage…</string>
    <string name="access_sd_fail">"Couldn't access USB storage."</string>
    <string name="confirm_restore_title">Restore default settings</string>
    <string name="confirm_restore_message">"Restore Camera's default settings?"</string>
    <string name="confirm_location_title">Remember photo locations?</string>
    <string name="confirm_location_message">Tag your photos and videos with the locations where they are taken. Other apps can access this information along with your saved images.</string>
    <string name="confirm_location_alert">Remember photo locations</string>
    <string name="start_capture">OK</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Save location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_proximity_lock_title">Pocket mode</string>
    <string name="pref_camera_proximity_lock_summary">Lock touch gestures when placed in a pocket</string>
    <string name="screen_on_proximity_sensor_summary">"Don't cover the earphone area"</string>
    <string name="screen_on_proximity_sensor_hint">To turn this feature off, press the Volume up and Back buttons simultaneously.</string>
    <string name="pref_front_mirror_title">Mirror front camera</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_hfr_title">Video HFR</string>
    <string name="pref_video_quality_default">6</string>
    <string name="pref_mi_front_video_quality_default">6</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_value_4kuhd">8</string>
    <string name="pref_video_quality_entry_4kuhd">UHD 4K</string>
    <string name="pref_video_quality_entry_1080p">FHD 1080P</string>
    <string name="pref_video_quality_entry_720p">HD 720P</string>
    <string name="pref_video_quality_entry_480p">SD 480P</string>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">2X (0.06-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">4X (0.12-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">10X (0.3-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">30X (1 second)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">60X (2-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">90X (3-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">120X (4-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">150X (5-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">240X (8-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">300X (10-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">450X (15-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">900X (30-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">1800X (60-second interval)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_picturesize_entry_4_3">4:3</string>
    <string name="pref_camera_picturesize_entry_16_9">16:9</string>
    <string name="pref_camera_picturesize_entry_18_9">18:9</string>
    <string name="pref_camera_jpegquality_value_high">high</string>
    <string name="pref_camera_jpegquality_value_normal">normal</string>
    <string name="pref_camera_jpegquality_value_low">low</string>
    <string name="pref_camera_jpegquality_default">@string/pref_camera_jpegquality_value_high</string>
    <string name="pref_camera_picture_format_entry_jpeg">Jpeg</string>
    <string name="pref_camera_picture_format_entry_raw">Raw</string>
    <string name="pref_camera_picture_format_value_jpeg">jpeg</string>
    <string name="pref_camera_picture_format_value_raw">raw</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_high">High</string>
    <string name="pref_camera_jpegquality_entry_normal">Standard</string>
    <string name="pref_camera_jpegquality_entry_low">Low</string>
    <string name="pref_camera_histogram_entry_enable">Turn on</string>
    <string name="pref_camera_histogram_entry_disable">Turn off</string>
    <string name="pref_camera_histogram_value_enable">enable</string>
    <string name="pref_camera_histogram_value_disable">disable</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">AUTO</string>
    <string name="pref_camera_focusmode_entry_normal">Standard</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_entry_manual">Manual</string>
    <string name="pref_video_focusmode_title">Focus mode</string>
    <string name="pref_video_focusmode_entry_continuous">CAF</string>
    <string name="pref_video_focusmode_entry_auto">Tap</string>
    <string name="pref_video_focusmode_entryvalue_continuous">continuous-video</string>
    <string name="pref_video_focusmode_entryvalue_auto">auto</string>
    <string name="pref_video_focusmode_entryvalue_default">@string/pref_video_focusmode_entryvalue_continuous</string>
    <string name="pref_camera_focusmode_value_default">continuous-picture</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_entry_torch">Torch</string>
    <string name="pref_camera_front_bokeh_entry_on">On</string>
    <string name="pref_camera_front_bokeh_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">WB</string>
    <string name="pref_camera_whitebalance_entry_auto">AUTO</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_entry_manual">Manual</string>
    <string name="pref_camera_whitebalance_entry_measure">Measure</string>
    <string name="pref_camera_whitebalance_entryvalue_auto">auto</string>
    <string name="pref_camera_whitebalance_entryvalue_incandescent">incandescent</string>
    <string name="pref_camera_whitebalance_entryvalue_daylight">daylight</string>
    <string name="pref_camera_whitebalance_entryvalue_fluorescent">fluorescent</string>
    <string name="pref_camera_whitebalance_entryvalue_cloudy">cloudy-daylight</string>
    <string name="pref_camera_whitebalance_entryvalue_manual">manual</string>
    <string name="pref_camera_whitebalance_entryvalue_measure">measure</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_shader_coloreffect_default">0</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_coloreffect_entry_sepia" />
    <string name="pref_camera_coloreffect_entry_negative" />
    <string name="pref_camera_coloreffect_entry_posterize" />
    <string name="pref_camera_coloreffect_entry_aqua" />
    <string name="pref_camera_ai_scene_title">AI camera</string>
    <string name="pref_camera_front_ai_scene_entry_on">AI camera</string>
    <string name="pref_camera_front_ai_scene_entry_off">AI camera is off</string>
    <string name="ai_scene_mode_use_hint_text">"AI camera detects scenes automatically
and optimizes your photos based on this info"</string>
    <string name="pref_camera_coloreffect_entry_none">Normal</string>
    <string name="pref_camera_coloreffect_entry_instagram_rise">Lomo</string>
    <string name="pref_camera_coloreffect_entry_instagram_clarendon">Color pop</string>
    <string name="pref_camera_coloreffect_entry_instagram_crema">Rustic</string>
    <string name="pref_camera_coloreffect_entry_instagram_hudson">Icy</string>
    <string name="pref_camera_coloreffect_entry_vivid">Vivid</string>
    <string name="pref_camera_coloreffect_entry_vsco_a4">Analog</string>
    <string name="pref_camera_coloreffect_entry_vsco_f2">Matte</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_blackwhite">B&amp;W</string>
    <string name="pref_camera_coloreffect_entry_sketch">Sketch</string>
    <string name="pref_camera_coloreffect_entry_big_face">Spread</string>
    <string name="pref_camera_coloreffect_entry_small_face">Squeeze</string>
    <string name="pref_camera_coloreffect_entry_long_face">Stretch</string>
    <string name="pref_camera_coloreffect_entry_fisheye">Fisheye</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_mirror">Mirror</string>
    <string name="pref_camera_coloreffect_entry_light_tunnel">Tunnel</string>
    <string name="color_effect_entry_vivid">Vivid</string>
    <string name="color_effect_entry_film">Film</string>
    <string name="color_effect_entry_koizora">Amour</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_panoramamode_title">Panorama</string>
    <string name="pref_camera_audio_capture_title">Audio</string>
    <string name="pref_camera_hand_night_title">HHT</string>
    <string name="pref_camera_settings_title">Settings</string>
</resources>